# propositional-formula

./: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  README.md  main.cpp  queue.h  stack.h  test1.txt
