cmake_minimum_required(VERSION 3.10)
project(untitled24)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
add_executable(untitled24 main.cpp
        stack.h BinaryTree.cpp BinaryTree.h queue.h)
target_link_libraries(untitled24 Qt5::Core)
target_link_libraries(untitled24 Qt5::Widgets)